feat: Testing coverage error